force-app/main/default/objects/ESS_Hotel_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_By__c</fullName>
        <label>Accepted By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adult__c</fullName>
        <label>Adult</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attachment_Files__c</fullName>
        <label>Attachment Files</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attentiveness_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attentiveness Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attentiveness_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attentiveness Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Comment__c</fullName>
        <label>Cancel Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <label>Cancelled By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_In__c</fullName>
        <label>Check In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <label>Check Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <label>Completed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <label>Document No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expertise_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expertise Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expertise_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expertise Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fast_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guest_1_Charge_Employee__c</fullName>
        <label>Guest 1 Charge Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guest_1_Contract_Rate__c</fullName>
        <label>Guest 1 Contract Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guest_1_Special_Request__c</fullName>
        <label>Guest 1 Special Request</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guest_2_Charge_Employee__c</fullName>
        <label>Guest 2 Charge Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guest_2_Contract_Rate__c</fullName>
        <label>Guest 2 Contract Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guest_2_Special_Request__c</fullName>
        <label>Guest 2 Special Request</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guest_Amount__c</fullName>
        <formula>Total__c * 0.3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guest_Name__c</fullName>
        <label>Guest Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Attachment_Files__c</fullName>
        <label>Hotel Attachment Files</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hotel_Id__c</fullName>
        <label>Hotel Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Name__c</fullName>
        <label>Hotel Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Website__c</fullName>
        <label>Hotel Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_PRTR_Requester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PRTR Requester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secretary_Requester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secretary Requester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_Map__c</fullName>
        <label>Link Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_URL__c</fullName>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Hotel_Id__c</fullName>
        <label>Master Hotel Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Night__c</fullName>
        <label>Night</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Behalf Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Department__c</fullName>
        <label>On Behalf Of Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_EN__c</fullName>
        <label>On Behalf Of EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Email__c</fullName>
        <label>On Behalf Of Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Employee_Id__c</fullName>
        <label>On Behalf Of Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Behalf Of Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Function__c</fullName>
        <label>On Behalf Of Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Id__c</fullName>
        <label>On Behalf Of Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Position__c</fullName>
        <label>On Behalf Of Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Section__c</fullName>
        <label>On Behalf Of Section</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Unit__c</fullName>
        <label>On Behalf Of Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Verifying__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Behalf Of Verifying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <label>On Behalf Of</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Comment__c</fullName>
        <label>PMSV Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMSV_Department__c</fullName>
        <label>PMSV Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Email__c</fullName>
        <label>PMSV Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Employee_Id__c</fullName>
        <label>PMSV Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Function__c</fullName>
        <label>PMSV Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Id__c</fullName>
        <label>PMSV Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Position__c</fullName>
        <label>PMSV Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Section__c</fullName>
        <label>PMSV Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Unit__c</fullName>
        <label>PMSV Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV__c</fullName>
        <label>PMSV</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Punctuality_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Punctuality Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Punctuality_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Punctuality Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_Date_2__c</fullName>
        <label>Rating Date 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rating_Date__c</fullName>
        <label>Rating Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rating_Score_2__c</fullName>
        <label>Rating Score 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Score__c</fullName>
        <label>Rating Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reject_Comment__c</fullName>
        <label>Reject Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <label>Rejected By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requester_Department__c</fullName>
        <label>Requester Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <label>Requester Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Employee_Id__c</fullName>
        <label>Requester Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Function__c</fullName>
        <label>Requester Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Id__c</fullName>
        <label>Requester Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name_EN__c</fullName>
        <label>Requester Name EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <label>Requester Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Position__c</fullName>
        <label>Requester Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Section__c</fullName>
        <label>Requester Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Tel_Mobile__c</fullName>
        <label>Requester Tel Mobile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Tel_Office__c</fullName>
        <label>Requester Tel Office</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Unit__c</fullName>
        <label>Requester Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_1_SAP_Status__c</fullName>
        <label>Room 1 SAP Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_2_SAP_Status__c</fullName>
        <label>Room 2 SAP Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_JSON__c</fullName>
        <label>Room JSON</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Room_Type__c</fullName>
        <label>Room Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Standard Single</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Standard Double</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Standard Twins</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Email_to_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email to Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>OnProcess</fullName>
                    <label>On Process</label>
                </value>
                <value>
                    <fullName>Verifying</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Thai_Oil_Amount__c</fullName>
        <formula>Total__c * 0.7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thai Oil Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Charge_Company__c</fullName>
        <label>Total Charge Company</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Charge_Employee__c</fullName>
        <label>Total Charge Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Room_Night__c</fullName>
        <label>Total Room Night</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twin_Bed_Charge_Employee__c</fullName>
        <label>Twin Bed Charge Employee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twin_Bed_Contract_Rate__c</fullName>
        <label>Twin Bed Contract Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_This_Year_Quota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use This Year Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_By__c</fullName>
        <label>Verified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>DateTime</type>
    </fields>
    <label>ESS Hotel Booking</label>
    <nameField>
        <displayFormat>HB-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>